This documents significant changes in the 93u+m branch of AT&T ksh93.
For full details, see the git log at: https://github.com/ksh93/ksh

Any uppercase BUG_* names are modernish shell bug IDs.

2021-11-18:

- The printf built-in command now supports a -v option as on bash and zsh.
  This allows you to assign formatted output directly to a variable.

- Fixed a performance regression introduced on 2021-05-03 that caused
  the shbench[*] fibonacci benchmark to run slower.
  [*]: https://github.com/ksh-community/shbench

2021-11-16:

- By default, arithmetic expressions in ksh no longer interpret a number
  with a leading zero as octal in any context. Use 8#octalnumber instead.
  Before, ksh would arbitrarily recognize the leading octal zero in some
  contexts but not others, e.g., both of:
	$ x=010; echo "$((x)), $(($x))"
	$ set -o letoctal; x=010; let y=$x z=010; echo "$y, $z"
  would output '10, 8'. These now output '10, 10' and '8, 8', respectively.
  Arithmetic expressions now also behave identically within and outside
  ((...)) and $((...)). Setting the --posix compliance option turns on the
  recognition of the leading octal zero for all arithmetic contexts.

2021-11-15:

- In arithmetic evaluation, the --posix compliance option now disables the
  special floating point constants Inf and NaN so that $((inf)) and $((nan))
  refer to the variables by those names as the standard requires. (BUG_ARITHNAN)

- Fixed two file descriptor leaks in the hist builtin that occurred when
  the -s flag ran a command or encountered an error.

2021-11-14:

- Fixed: ksh crashed after unsetting .sh.match and then matching a pattern.

- Another test/[ fix: "test \( string1 -a string2 \)" and "test \( string1 -o
  string2 \)" no longer give an incorrect "argument expected" error message.

2021-11-13:

- The test/[ built-in command now supports the '<' and '=~' operators from [[.
  As of now, test/[ supports the same operators as [[ except for the different