@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2021-11-20:
+
+- Listing types with 'typeset -T' no longer displays incomplete versions of
+  types created by the enum built-in.
+
 2021-11-18:
 
 - The printf built-in command now supports a -v option as on bash and zsh.
